Fix a bug on Safari

--- a/src/menu-simplex.scss
+++ b/src/menu-simplex.scss
@@ -207,6 +207,7 @@
 .menu-simplex:where(.with-popup-wipe) :where(.panel:not(.menu)) {
 	display           : grid;
 	grid-template-rows: 0fr;
+	width             : max-content;  // For Safari.
 	transition        : grid-template-rows 0.20s 0.05s;
 	> * { overflow: hidden; }
 
